# RustyMart

./: Cargo.toml  index.html
src/: api.rs  main.rs  types.rs
src/pages/: home.rs
