[package]
name = "yew_rustmart"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }